--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,6 +33,10 @@ framework:
     assets: ~
     php_errors:
         log: true
+    #enable serializer
+    serializer:
+        enabled: true
+
 
 # Twig Configuration
 twig:
@@ -68,3 +72,16 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+    
+# fosRest Configuration
+fos_rest:
+    routing_loader:
+        include_format: false
+    view:
+        view_response_listener: true
+    format_listener:
+        rules:
+            - { path: '^/', priorities: ['json'], fallback_format: 'json', prefer_extension: false }
+    # configuration à rajouter pour désactiver le body listener
+    body_listener:
+        enabled: true
